<resources>
    <string name="app_name">i-Parapheur</string>
    <string name="title_dossier_detail">Dossier Detail</string>
    <string name="account_new">Nouveau compte</string>
    <string name="search">Rechercher</string>
    <string name="about">À propos</string>
    <string name="media_not_mounted">Aucun stockage disponible, les documents ne seront pas visualisables.</string>
    <string name="type">Type</string>
    <string name="sous_type">Sous-Type</string>
    <string name="circuit">Circuit de validation</string>
    <string name="icon_action">icône d\'action</string>
    <string name="par">par</string>
    <string name="network_unreachable">Aucune connexion disponible</string>
    <string name="at">à</string>
    <string name="le">le</string>
    <string name="action_details">Informations du dossier</string>
    <string name="action_dossiers">dossiers</string>
    <string name="action_filtrer">Filtrer</string>
    <string name="document_selection">Sélection du document</string>
    <string name="Download">Télécharger</string>
    <string name="Offline_content">Préparation du mode hors ligne</string>
    <string name="Filter_selection">Sélection du filtre</string>
    <string name="Action_unavailable_offline">Action impossible : Pas de connexion</string>
    <string name="password">Mot de passe</string>
    <string name="Mandatory">Obligatoire</string>
    <string name="Optional">Facultatif</string>
    <string name="Indeterminate">Indéterminé</string>
    <string name="drawer_open">Ouvrir le menu contextuel</string>
    <string name="drawer_close">Fermer le menu contextuel</string>
    <string name="Late_since">En retard depuis le %s</string>
    <string name="Emit_since">Émis le %s</string>
    <string name="Sync_date">Téléchargé le %1$s à %2$s</string>
    <string name="one_dossier">1 dossier</string>
    <string name="one_late_dossier">1 dossier en retard</string>
    <string name="nb_dossiers">%d dossiers</string>
    <string name="nb_late_dossiers">%d dossiers en retard</string>
    <string name="nb_dossiers_nb_late">%1$d dossiers, %2$d en retard</string>
    <string name="no_dossier">Aucun dossier</string>
    <string name="no_late_dossier">Aucun dossier en retard</string>
    <string name="Share">Partager</string>
    <string name="Choose_an_app">Choisissez une application</string>
    <string name="action_share_subject">iParapheur - %s</string>
    <string name="action_share_text">Ci-joint, le document "%1$s" du dossier "%2$s"</string>
    <string name="action_valider">Valider</string>
    <string name="action_rejeter">Rejeter</string>
    <string name="action_viser">Viser</string>
    <string name="action_signer">Signer</string>
    <string name="action_seal">Cacheter</string>
    <string name="action_sign_papier">Sign. papier</string>
    <string name="action_tdt">Envoyer au TdT</string>
    <string name="action_tdt_actes">Envoyer au TdT - ACTES</string>
    <string name="action_tdt_helios">Envoyer au TdT - HELIOS</string>
    <string name="action_mailsec">Envoyer par mail sécurisé</string>
    <string name="action_mail">Envoyer par mail</string>
    <string name="action_secretariat">Envoyer au Secretariat</string>
    <string name="action_remord">Reprendre</string>
    <string name="action_avis">Demander un avis complémentaire</string>
    <string name="action_transfertsign">Transférer le dossier à signer</string>
    <string name="action_ajoutsign">Ajouter une signature au dossier</string>
    <string name="action_enregistrer">Enregistrer le dossier</string>
    <string name="action_supprimer">Supprimer le dossier</string>
    <string name="action_archiver">Archiver</string>
    <string name="public_annotation">Annotation publique</string>
    <string name="private_annotation">Annotation privée</string>
    <string name="selected_certificate">Certificat sélectionné</string>
    <string name="select_certificate">Choisir un certificat</string>
    <string name="select_alias">Choisir un alias</string>
    <string name="please_select_certificate">Veuillez selectionner un certificat</string>
    <string name="justify_reject">Merci de saisir votre motif de rejet</string>
    <string name="etape_courante">Étape courante</string>
    <string name="en_preparation">À transmettre</string>
    <string name="a_traiter">À traiter</string>
    <string name="a_archiver">En fin de circuit</string>
    <string name="retournes">Retournés</string>
    <string name="en_cours">En cours</string>
    <string name="a_venir">"À venir</string>
    <string name="recuperables">Récupérables</string>
    <string name="en_retard">En retard</string>
    <string name="traites">Traités</string>
    <string name="dossiers_delegues">Dossiers en délégation</string>
    <string name="no_corbeille">Toutes les banettes</string>
    <string name="no_bureau">Tout i-Parapheur</string>
    <string name="import_title">Importer un certificat BKS</string>
    <string name="import_certificate">Importer</string>
    <string name="import_successful">Le certificat a été importé avec succès.</string>
    <string name="import_error_message_incorrect_scheme">Le scheme pour importer le certificat est incorrect.</string>
    <string name="import_error_message_cant_download_certificate">Erreur au téléchargement du certificat.</string>
    <string name="import_error_message_opening_bks_file">Le mot de passe est invalide, ou le certificat est corrompu.</string>
    <string name="import_error_message_cant_copy_certificate">Impossible de copier le certificat sur la mémoire interne.</string>
    <string name="import_error_message_incompatible_device">Cet appareil ne semble pas compatible avec les outils de cryptage utilisés.</string>
    <string name="reject_error_message_not_sent_to_server">Un problème est survenu à l\'envoi du rejet au serveur.</string>
    <string name="reject_error_message_unknown_error">Erreur inconnue lors du rejet.</string>
    <string name="reject_error_missing_annotation_error">Une annotation publique est obligatoire lors d\'un rejet.</string>
    <string name="signature_error_label">Erreur à la signature : </string>
    <string name="signature_error_message_unknown_error">Erreur inconnue lors de la signature.</string>
    <string name="signature_error_message_incompatible_device">Cet appareil ne semble pas compatible avec les outils de signature utilisés.</string>
    <string name="signature_error_message_error_opening_bks_file">Le mot de passe du certificat n\'est pas valide, ou le certificat est corrompu.</string>
    <string name="signature_error_message_wrong_password">Le mot de passe n\'est pas valide.</string>
    <string name="signature_error_message_missing_alias_or_wrong_password">Alias ou mot de passe incorrect.</string>
    <string name="signature_error_message_missing_bks_file">Le certificat BKS est introuvable.</string>
    <string name="signature_error_message_no_data_to_sign">Le contenu à signer n\'a pu être récupéré.</string>
    <string name="signature_error_message_not_sent_to_server">Un problème est survenu à l\'envoi de la signature au serveur.</string>
    <string name="signature_error_message_not_get_from_server">Un problème réseau est survenu à la récupération des données à signer.</string>
    <string name="signature_papier_transform">Transformer</string>
    <string name="signature_papier_unknown_error">Erreur inconnue lors de la transformation en signature papier.</string>
    <string name="signature_papier_confirmation_text">Voulez vous réellement changer le mode de signature de ce dossier vers le mode signature papier ?\nVous devrez imprimer et signer le document manuellement.</string>
    <string name="visa_error_message_not_sent_to_server">Un problème est survenu à l\'envoi du visa au serveur.</string>
    <string name="visa_error_message_unknown_error">Erreur inconnue lors du visa.</string>
    <string name="download_bureau">Métadatas des bureaux</string>
    <string name="download_dossier">Métadatas des dossiers</string>
    <string name="download_document">Téléchargement des documents</string>
    <string name="add_annotation">Annoter</string>
    <string name="cannot_open_file_Path">Impossible d\'ouvrir le fichier : %1$s</string>
    <string name="cannot_open_buffer">Impossible d\'ouvrir le buffer</string>
    <string name="not_supported">Non compatible</string>
    <string name="test_ok">Connexion réussie</string>
    <string name="test_forbidden">Nom d\'utilisateur ou mot de passe incorrect</string>
    <string name="test_not_found">URL non trouvée</string>
    <string name="test_unreachable">Impossible d\'accéder au serveur</string>
    <string name="test_tenant_not_exist">La collectivité est inaccessible.</string>
    <string name="pref_account_test">Tester</string>
    <string name="no_details">Aucun détail disponible</string>
    <string name="error_reading_document">Impossible de lire le document</string>
    <string name="Title_search">Titre à rechercher</string>
    <string name="Current_state">Étape courante</string>
    <string name="Typology">Typologie</string>
    <string name="enregistrer_filtre">Enregistrer</string>
    <string name="filtre_nom">Nom du filtre</string>
    <string name="Add_filter">Ajouter un filtre</string>
    <string name="No_filter">Aucun filtre</string>
    <string name="New_filter">Nouveau filtre</string>
    <string name="http_error_undefined">Une erreur est intervenue lors de l\'envoi de la requête</string>
    <string name="http_error_malformed_url">URL mal formée : %s</string>
    <string name="http_error_ssl_failed">Erreur lors de la mise en place de la connexion sécurisée</string>
    <string name="http_error_explicit">%s</string>
    <string name="http_error_400">Erreur lors de l\'envoi de la requête (HTTP 400)</string>
    <string name="http_error_401">Authentification obligatoire</string>
    <string name="http_error_403">Votre compte ne permet pas d\'effectuer cette action</string>
    <string name="http_error_404">Page non trouvée (HTTP 404)</string>
    <string name="http_error_405">Méthode de requête non autorisée</string>
    <string name="http_error_503">Le service est actuellement indisponible</string>
    <string name="error_no_internet">Erreur à l\'envoi de la requête : Aucune connexion</string>
    <string name="error_mismatch_versions">Le i-Parapheur associé au compte %s est incompatible avec cette application</string>
    <string name="error_send_request">Erreur à l\'envoi de la requête</string>
    <string name="error_parse">Erreur lors du traitement de la réponse</string>
    <string name="error_no_ticket">Impossible de se connecter, veuillez vérifier vos comptes</string>
    <string name="error_no_account">Impossible de se connecter, veuillez vérifier vos comptes</string>
    <string name="error_no_storage">Stockage inaccessible</string>
    <string name="error_file_not_found">Impossible d\'enregistrer le fichier.</string>
    <string name="error_server_not_configured">Le serveur ne permet pas l\'utilisation de l\'application mobile.</string>
    <string name="error_server_not_configured_for_tenant">Le serveur ne permet pas l\'accès à cette collectivité.</string>
    <string name="action_non_implementee">non implémenté</string>
    <string name="action_journal">Journal d\'événements</string>
    <string name="action_transfert">Transfert d\'action</string>
    <string name="no_content">Pas de contenu</string>
    <string name="no_dossiers">Vos dossiers s\'afficheront ici</string>
    <string name="no_dossiers_filter_alert">Désactivez le filtre pour obtenir plus de résultats</string>
    <string name="no_bureaux">Vos bureaux s\'afficheront ici</string>
    <string name="action_mode_nb_dossiers">%d dossier(s)</string>
    <string name="Error_on_typology_update">Erreur à la récupération de la typologie du dossier</string>
    <string name="Error_on_annotation_update">Impossible d\'enregistrer l\'annotation</string>
</resources>