<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/spacer"
    android:orientation="vertical"
    android:padding="24dp"
    android:showDividers="middle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/action_reject_public_annotation_label"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/public_annotation"
            android:textColor="@color/edittext_label_activable"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/action_reject_public_annotation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/Mandatory"
            android:inputType="textMultiLine"
            android:lines="4"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black_disabled"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/action_reject_private_annotation_label"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/private_annotation"
            android:textColor="@color/edittext_label_activable"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/action_reject_private_annotation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/Optional"
            android:inputType="textMultiLine"
            android:lines="4"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black_disabled"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>