<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:drawable="@android:color/background_light"
    android:orientation="vertical"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/filter_dialog_titre_label"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:text="@string/Title_search"
            android:textColor="@color/edittext_label_activable"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/filter_dialog_titre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/Optional"
            android:inputType="text"
            android:lines="1"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black_disabled"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/filter_dialog_state_spinner_label"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:text="@string/Current_state"
            android:textColor="@color/edittext_label_activable"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/filter_dialog_state_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:spinnerMode="dropdown" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/filter_dialog_typology_label"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:text="@string/Typology"
            android:textColor="@color/edittext_label_activable"
            android:textSize="12sp" />

        <ExpandableListView
            android:id="@+id/filter_dialog_typology"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:dividerHeight="0dp" />

    </LinearLayout>

</LinearLayout>